# GD32_CMake_Example

./: .gitignore  .gitmodules  CMakeLists.txt  GD32_Project.7z  README.md  gd32f3x0.ld
Core/: CMakeLists.txt
Core/inc/: gd32f3x0_it.h  gd32f3x0_libopt.h  iic.h  log.h  main.h  systick.h  test.h  uart.h
Core/src/: gd32f3x0_it.c  main.c  systick.c  test.c  uart.c
Drivers/: CMakeLists.txt
Drivers/CMSIS/: CMakeLists.txt
Drivers/CMSIS/GD/GD32F3x0/Include/: gd32f3x0.h
Drivers/CMSIS/GD/GD32F3x0/Source/: system_gd32f3x0.c
Drivers/GD32F3x0_standard_peripheral/: CMakeLists.txt
Drivers/GD32F3x0_standard_peripheral/Include/: gd32f3x0_ctc.h  gd32f3x0_dma.h  gd32f3x0_gpio.h  gd32f3x0_rcu.h  gd32f3x0_spi.h  gd32f3x0_usart.h
Drivers/GD32F3x0_standard_peripheral/Source/: gd32f3x0_ctc.c  gd32f3x0_dma.c  gd32f3x0_spi.c  gd32f3x0_tsi.c  gd32f3x0_usart.c
Drivers/RTT/: CMakeLists.txt  SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_Extended.c  SEGGER_RTT_Extended.h
OpenOCD/: Start_RTT.cfg  Start_RTT_Jlink.cfg  gd32f310.cfg  gd32f3x0.cfg  openocd.cfg  openocd_jlink.cfg
Retarget/: CMakeLists.txt  retarget.c
cmake/: add_libs.cmake  arm-none-eabi-gcc.cmake
